--- a/css/main.css
+++ b/css/main.css
@@ -125,7 +125,9 @@ main {
 header,
 footer,
 main {
-  /*set display to flex and vertically & horizontally align by setting justify-content and align-items to center*/
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 #div-1,
@@ -146,7 +148,10 @@ main {
 }
 
 .flex-container {
-  /*set display to flex and vertically & horizontally align by setting justify-content and align-items to center, and set flex-flow to row wrap*/
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-flow: row wrap;
 }
 
 .flex-items {
